crates/ridge-parser/tests/fixtures/errors/p020_reserved_keyword_in_fn_param.ridge
-- expect: P020
-- Trigger: `state` is a reserved keyword and cannot be a fn parameter name.
fn run (state: Int) -> Int = state + 1
